--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,3 +190,47 @@ header {
 }
 
 
+
+/* Section info */
+
+.info {
+    padding: 500px 0px 100px 0px;
+}
+
+.info-image {
+    position: absolute;
+    left: -20px;
+    top: 620px;
+}
+
+.info-area {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.info--card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    padding: 30px;
+    background-color: var(--background-color);
+    border-radius: 10px;
+    list-style: none;
+    flex: 1;
+    box-shadow: 0px 13px 50px -32px rgba(0, 0, 0, 0.25);
+}
+
+.info--card--desc--text {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.info--card--image {
+    display: flex;
+    width: 100px;
+    justify-content: start;
+}
+
