--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ p {
 span {
     font-size: 7rem;
     color: rgb(255, 255, 255, 0.6);
+    margin-top: 30px;
 }
 
 span a{
@@ -903,6 +904,10 @@ footer {
 
     .cart-area {
         width: 317px;
+    }
+
+    p {
+        font-size: 9rem;    
     }
 
 }
